<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".view.game.GameActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray" android:id="@+id/gameCl">

        <ImageView
                android:layout_width="142dp"
                android:layout_height="179dp" app:srcCompat="@drawable/ic_tap_white"
                android:id="@+id/tapIv" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/counterTv"/>
        <TextView
                android:id="@+id/counterTv"
                android:text="@string/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" style="@style/TextAppearance.MaterialComponents.Headline2"
                android:textColor="@color/white"/>

        <TextView
                android:id="@+id/timerTv"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:text="@string/sample_game_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/counterTv"
                app:layout_constraintVertical_bias="1.0"/>

        <TextView
                android:id="@+id/tapsTv"
                android:text="@string/get_ready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:textColor="@color/colorPrimaryDark" app:layout_constraintHorizontal_bias="0.497"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/counterTv"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/timerTv"
                app:layout_constraintVertical_bias="0.0" android:textSize="18sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <smutkiewicz.dafttapchallenge.view.game.GameTouchCounterView
            android:id="@+id/gameAreaView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:background="@android:color/transparent"
            android:focusable="true"/>

</FrameLayout>